--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.16.1",
+    "bootstrap": "^5.0.1",
     "framer-motion": "^4.1.17",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
